@@ -1,5 +1,13 @@
 2001-04-12  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (Language): Add attribute `name'.
+	(&register_language): The name of the language is now given in the
+	hash.
+	No longer use `$lang' as the name of the language.
+	Rename `$lang_obj' as `$lang'.
+
+2001-04-12  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (Language): Add attribute `_finish'.
 	(&finish): New.
 	(Automake): Adjust.
